[gd_scene load_steps=18 format=3 uid="uid://i460doofu8ra"]

[ext_resource type="Theme" uid="uid://bm4coof7xuoxa" path="res://ui/themes/cheerful.tres" id="1_iqhwg"]
[ext_resource type="PackedScene" uid="uid://dbt62k38xlh86" path="res://ui/main_menu/menu_buttons.tscn" id="2_2fvvs"]
[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="2_m5tbp"]
[ext_resource type="Texture2D" uid="uid://up66cfwhrcj0" path="res://ui/main_menu/title_logo.jpg" id="2_nx5st"]
[ext_resource type="PackedScene" uid="uid://cfg03qrcehfj6" path="res://scenes/levels/level_1.tscn" id="3_rqm0j"]
[ext_resource type="PackedScene" uid="uid://v8ofk5aftia" path="res://ui/main_menu/options_screen.tscn" id="4_doaxe"]
[ext_resource type="AudioStream" uid="uid://r6jgnws3dlfq" path="res://ui/sounds/switch8.ogg" id="6_d8fh5"]
[ext_resource type="AudioStream" uid="uid://cfq6tjypuo31m" path="res://ui/sounds/OrchAmbient.mp3" id="7_dkxxa"]

[sub_resource type="Gradient" id="Gradient_7vmtf"]
colors = PackedColorArray(0.111154, 0.573028, 0.848402, 1, 0.0117647, 0.223529, 0.34902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hp6wh"]
gradient = SubResource("Gradient_7vmtf")

[sub_resource type="GDScript" id="GDScript_fei2e"]
script/source = "extends ColorRect

func _init() -> void:
	visible = true
"

[sub_resource type="Animation" id="Animation_ctpnx"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_1c5rf"]
resource_name = "fade_animation"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gv8jo"]
_data = {
"RESET": SubResource("Animation_ctpnx"),
"fade_animation": SubResource("Animation_1c5rf")
}

[sub_resource type="Animation" id="Animation_ygvve"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1800, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(400, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_o4ks4"]
resource_name = "options_slide_in"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1800, -0.25, 0, 0.25, 0, 600, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(400, -0.25, 0, 0.25, 0, 400, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m1cdh"]
_data = {
"RESET": SubResource("Animation_ygvve"),
"options_slide_in": SubResource("Animation_o4ks4")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iqhwg")
script = ExtResource("2_m5tbp")
first_level = ExtResource("3_rqm0j")

[node name="CloudBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_hp6wh")

[node name="TitleLogo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -438.0
offset_top = 73.0
offset_right = 438.0
offset_bottom = 384.0
grow_horizontal = 2
texture = ExtResource("2_nx5st")

[node name="MenuPanel" parent="." instance=ExtResource("2_2fvvs")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -380.0
offset_top = -261.0
offset_right = 380.0
offset_bottom = -149.0
grow_horizontal = 2
grow_vertical = 0

[node name="Fader" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
mouse_default_cursor_shape = 2
script = SubResource("GDScript_fei2e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Fader"]
libraries = {
"": SubResource("AnimationLibrary_gv8jo")
}
autoplay = "fade_animation"
speed_scale = 0.5

[node name="OptionsScreen" parent="." instance=ExtResource("4_doaxe")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1200.0
offset_right = 1200.0

[node name="MusicSlider" parent="OptionsScreen/MarginContainer/PanelContainer/VBoxContainer/MuiscVol/HBox" index="1"]
value = 0.3

[node name="AnimationPlayer" type="AnimationPlayer" parent="OptionsScreen"]
libraries = {
"": SubResource("AnimationLibrary_m1cdh")
}

[node name="MenuSounds" type="Node" parent="."]

[node name="Click" type="AudioStreamPlayer" parent="MenuSounds"]
stream = ExtResource("6_d8fh5")
bus = &"SFX"

[node name="Hover" type="AudioStreamPlayer" parent="MenuSounds"]
stream = ExtResource("6_d8fh5")
pitch_scale = 0.8
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="MenuSounds"]
stream = ExtResource("7_dkxxa")
autoplay = true
bus = &"Music"

[connection signal="focus_entered" from="MenuPanel/MarginContainer/VBoxContainer/StartButton" to="." method="play_hover"]
[connection signal="mouse_entered" from="MenuPanel/MarginContainer/VBoxContainer/StartButton" to="." method="play_hover"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="focus_entered" from="MenuPanel/MarginContainer/VBoxContainer/OptionsButton" to="." method="play_hover"]
[connection signal="mouse_entered" from="MenuPanel/MarginContainer/VBoxContainer/OptionsButton" to="." method="play_hover"]
[connection signal="pressed" from="MenuPanel/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="focus_entered" from="MenuPanel/MarginContainer/VBoxContainer/QuitButton" to="." method="play_hover"]
[connection signal="mouse_entered" from="MenuPanel/MarginContainer/VBoxContainer/QuitButton" to="." method="play_hover"]
[connection signal="focus_entered" from="OptionsScreen/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/MainMenuButton" to="." method="play_hover"]
[connection signal="mouse_entered" from="OptionsScreen/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/MainMenuButton" to="." method="play_hover"]
[connection signal="pressed" from="OptionsScreen/MarginContainer/PanelContainer/VBoxContainer/MarginContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]

[editable path="MenuPanel"]
[editable path="OptionsScreen"]
